# mcp.odoo

./: .cursorrules  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .python-version  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PREPARE_RELEASE.md  README.md  mkdocs.yml  pyproject.toml
.agents/knowledge/odoo-api-json2/: metadata.json
.agents/knowledge/odoo-api-json2/artifacts/: json2_api_reference.md
.agents/rules/: release_workflow.md
.gitlab/issue_templates/: Default.md
.gitlab/merge_request_templates/: Default.md
docs/: cli.md  contributing.md  index.md  mcp-tools.md
docs/skills/: cli.md  mcp.md
docs/stylesheets/: vauxoo.css
odoo_mcp_multi/: __init__.py  __main__.py  cli.py  client.py  config.py  exceptions.py  operations.py  parsers.py  server.py  utils.py  version.py
odoo_mcp_multi/skills/odoo-mcp-cli/: SKILL.md
odoo_mcp_multi/skills/odoo-mcp-tools/: SKILL.md
odoo_mcp_multi/skills/odoo-module-deps/: SKILL.md
odoo_mcp_multi/skills/odoo-module-deps/scripts/: module_deps.py  module_deps_lib.py
tests/: test_basic.py  test_cli_commands.py  test_cli_output_format.py  test_cli_profile.py  test_cli_upgrade.py  test_config.py  test_format_extension.py  test_import_export.py  test_json2_client.py  test_json_decode_error.py  test_module_deps.py  test_operations.py  test_pre_parsed_args.py  test_server_mcp.py  test_ssl_verification.py  test_utils_pure_functions.py
tests/integration/: .env.local.test.example  conftest.py  test_json2_real.py  test_jsonrpc_real.py  test_xmlrpc_real.py
