[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-mcp-multi"
version = "0.1.0"
description = "MCP Server for connecting Claude/Cursor to multiple Odoo instances"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Vauxoo", email = "info@vauxoo.com" }
]
keywords = ["mcp", "odoo", "erp", "xmlrpc", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
odoo-mcp = "odoo_mcp_multi.cli:main"

[project.urls]
Homepage = "https://github.com/vauxoo/odoo-mcp-multi"
Repository = "https://github.com/vauxoo/odoo-mcp-multi"

[tool.hatch.build.targets.wheel]
packages = ["odoo_mcp_multi"]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 15
