[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-mcp-multi"
version = "0.1.0"
description = "MCP Server for connecting Claude/Cursor to multiple Odoo instances"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "nhomar [Vauxoo]", email = "info@vauxoo.com" }
]
keywords = ["mcp", "odoo", "erp", "xmlrpc", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "bump-my-version>=0.28.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
odoo-mcp = "odoo_mcp_multi.cli:main"

[project.urls]
Homepage = "https://git.vauxoo.com/nhomar/mcp.odoo"
Repository = "https://git.vauxoo.com/nhomar/mcp.odoo"

[tool.hatch.build.targets.wheel]
packages = ["odoo_mcp_multi"]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "odoo_mcp_multi/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=odoo_mcp_multi --cov-report=term-missing --cov-report=xml"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["odoo_mcp_multi"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
