[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-mcp-multi"
version = "0.4.1"
description = "MCP server for Odoo — connect Claude, Cursor, VS Code and Antigravity to multiple Odoo instances via Model Context Protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Nhomar Hernandez", email = "info@vauxoo.com" }
]
maintainers = [
    { name = "Nhomar Hernandez", email = "info@vauxoo.com" }
]
keywords = [
    "mcp", "mcp-server", "model-context-protocol",
    "odoo", "odoo-mcp", "odoo-ai", "odoo-erp", "odoo-integration",
    "claude", "claude-desktop", "cursor", "vscode", "antigravity",
    "erp", "xmlrpc", "json-rpc", "multi-instance", "multi-profile",
    "ai", "llm", "agentic", "ai-tools",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Office/Business",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "bump-my-version>=0.28.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
odoo-mcp = "odoo_mcp_multi.cli:main"

[project.urls]
Homepage = "https://git.vauxoo.com/nhomar/mcp.odoo"
Repository = "https://git.vauxoo.com/nhomar/mcp.odoo"
Documentation = "https://git.vauxoo.com/nhomar/mcp.odoo/-/blob/main/README.md"
"Issue Tracker" = "https://git.vauxoo.com/nhomar/mcp.odoo/-/issues"

[tool.hatch.build.targets.wheel]
packages = ["odoo_mcp_multi"]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.bumpversion]
current_version = "0.4.1"
commit_message = "Bump version: {current_version} → {new_version} [skip ci]"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "odoo_mcp_multi/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "tests/test_basic.py"
search = "assert __version__ == \"{current_version}\""
replace = "assert __version__ == \"{new_version}\""

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=odoo_mcp_multi --cov-report=term-missing --cov-report=xml"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["odoo_mcp_multi"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
